kubernetes/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-samuel-braga
  namespace: samuel-braga
spec:
  selector:
    app: game-samuel-braga
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
