kubernetes/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: game-samuel-braga
  namespace: samuel-braga
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: agw.hostname.com
    http:
      paths:
      - path: /samuel-braga*
        backend:
          serviceName: game-samuel-braga
          servicePort: 80
